css/styles.css
/*=============== GOOGLE FONTS ===============*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");

/*=============== VARIABLES CSS ===============*/
:root {
  --header-height: 3.5rem;

  /*========== Colors ==========*/
  /*Color mode HSL(hue, saturation, lightness)*/
  --first-color: hsl(23, 100%, 50%);
  --gradient-color: linear-gradient(90deg, hsl(23, 4%, 28%) 0%, hsl(23, 4%, 8%) 100%);
  --white-color: hsl(0, 0%, 100%);
  --text-color: hsl(23, 4%, 60%);
  --body-color: hsl(23, 12%, 4%);
  --container-color: hsl(23, 4%, 10%);

  /*========== Font and typography ==========*/
  /*.5rem = 8px | 1rem = 16px ...*/
  --body-font: "Poppins", sans-serif;
  --biggest-font-size: 10rem;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1rem;
  --normal-font-size: 0.938rem;
  --small-font-size: 0.813rem;
  --smaller-font-size: 0.75rem;

  /*========== Font weight ==========*/
  --font-regular: 400;
  --font-medium: 500;
  --font-semi-bold: 600;

  /*========== z index ==========*/
  --z-tooltip: 10;
  --z-fixed: 100;
}

/*========== Responsive typography ==========*/
@media screen and (min-width: 1150px) {
  :root {
    --biggest-font-size: 25rem;
    --h1-font-size: 2.25rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1rem;
    --small-font-size: 0.875rem;
    --smaller-font-size: 0.813rem;
  }
}

/*=============== BASE ===============*/
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  background-color: var(--body-color);
  color: var(--text-color);
}

h1,
h2,
h3,
h4 {
  color: var(--white-color);
  font-weight: var(--font-semi-bold);
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

/*=============== REUSABLE CSS CLASSES ===============*/
.container {
  max-width: 1120px;
  margin-inline: 1.5rem;
}

.grid {
  display: grid;
  gap: 1.5rem;
}

.section {
  padding-block: 5rem 1rem;
}

.section__title {
  font-size: var(--h2-font-size);
  text-align: center;
  margin-bottom: 1.5rem;
}

.main {
  overflow: hidden; /* For animation ScrollReveal */
}

/*=============== HEADER & NAV ===============*/

.header {
  position: fixed;
  width: 100%;
  left: 0;
  top: 0;
  z-index: var(--z-fixed);
}

.nav {
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav__logo {
  font-size: var(--h2-font-size);
  font-weight: var(--font-semi-bold);
  color: var(--first-color);
}

.nav__close,
.nav__toggle {
  display: flex;
  font-size: 1.5rem;
  color: var(--white-color);
  cursor: pointer;
}
/* Navigation for mobile devices */
@media screen and (max-width: 1150px) {
  .nav__menu {
    position: fixed;
    left: 0;
    top: -100%;
    right: 0;
    padding-block: 5.5rem 4.5rem;
    background-color: hsla(23, 12%, 4%, 0.12);
    backdrop-filter: blur(32px);
    /* -webkit-backdrop-filter: blur(32px); */
    transition: top 0.4s;
  }
}

.nav__list {
  display: flex;
  flex-direction: column;
  text-align: center;
  row-gap: 2.5rem;
}
.nav__link {
  color: var(--white-color);
  font-weight: var(--font-medium);
  transition: color 0.4s;
}
.nav__link:hover {
  color: var(--first-color);
}

.nav__close {
  position: absolute;
  top: 1rem;
  right: 2.5rem;
}

/* Show menu */
.show-menu {
  top: 0;
}

/* Add blur header */

/* Active link */

/*=============== HOME ===============*/
.hero-section__container {
  position: relative;
  padding-block: 7rem 1rem;
  row-gap: 2.5rem;
}

.hero-section__content {
  position: relative;
  display: grid;
  justify-self: center;
}

.hero-section__img {
  width: 220px;
  margin-bottom: 1.5rem;
}

.hero-section__title {
  font-size: var(--biggest-font-size);
  color: var(--first-color);
  display: flex;
  column-gap: 0.25rem;
  position: absolute;
  top: -2rem;
  justify-self: center;
}
.hero-section__title span:nth-child(2) {
  z-index: -1;
}

.hero-section__tooltip {
  position: absolute;
  top: -0.5rem;
  right: 1.5rem;
}

.hero-section__tooltip-img {
  width: 60px;
}
.hero-section__tooltip-text {
  color: var(--white-color);
  font-size: var(--small-font-size);
  font-weight: var(--font-medium);
  background: var(--gradient-color);
  padding: 0.25rem 0.75rem;
  border-radius: 4rem;
  position: absolute;
  transform: translate(60px, -40px);
  white-space: nowrap;
}

.hero-section__socials {
  display: grid;
  justify-items: center;
  row-gap: 6rem;
  position: absolute;
  top: 2rem;
  left: -4.5rem;
}

.hero-section__socials-text {
  position: relative;
  rotate: 90deg;
  font-size: var(--small-font-size);
  font-weight: var(--font-medium);
}
.hero-section__socials-text::after {
  content: "";
  width: 48px;
  height: 1px;
  background-color: var(--text-color);
  position: absolute;
  top: 0;
  bottom: 0;
  margin-block: auto;
  right: -64px;
}
.hero-section__socials-links {
  display: grid;
  row-gap: 0.75rem;
}
.hero-section__socials-link {
  font-size: 1.25rem;
  color: var(--text-color);
  transition: color 0.4s;
}
.hero-section__socials-link:hover {
  color: var(--first-color);
}

.hero-section__button {
  justify-self: center;
}
/*=============== BUTTON ===============*/
.button {
  background: var(--gradient-color);
  padding: 0.75rem 1.5rem;
  border-radius: 4rem;
  color: var(--white-color);
  font-weight: var(--font-semi-bold);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  column-gap: 0.5rem;
  transition: box-shadow 0.4s;
}
.button i {
  font-size: 1.5rem;
  font-weight: initial;
  color: var(--first-color);
}

.button:hover {
  box-shadow: 0 12px 32px hsla(23, 100%, 50%, 0.12);
}
/*=============== ABOUT ===============*/

/*=============== FAVORITE ===============*/

/* Swiper class */

/*=============== MODEL ===============*/

/*=============== SPONSOR ===============*/

/*=============== FOOTER ===============*/

/*=============== SCROLL BAR ===============*/

/*=============== SCROLL UP ===============*/

/* Show Scroll Up */

/*=============== BREAKPOINTS ===============*/
/* For small devices */

/* For medium devices */

/* For large devices */

